--- a/src/Counter/Counter.module.css
+++ b/src/Counter/Counter.module.css
@@ -1,70 +1,81 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 30px;
+    background-color: #202c2d;
+}
+
 .wrap {
-    text-align: center;
-    margin: 200px 600px;
-    width: 400px;
-    height: 400px;
-    border: 2px solid black;
-    border-radius: 20px;
-    background-color: aqua;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 2em;
+    max-width: 1170px;
+    width: 400px;
+    height: 400px;
+    padding: 0 15px;
+    /*margin: 0 auto;*/
+    margin: 200px 500px;
+    border: 2px solid #02d0ec;
+    border-radius: 5px;
+    background-color: #202c2d;
 }
 
 .display {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    width: 300px;
+    height: 100px;
+    padding: 0 15px;
+    margin: 20px auto;
+    border: 2px solid #02d0ec;
+    border-radius: 5px;
 }
 
 .error {
+    display: flex;
+    justify-content: center;
+    padding: 0 15px;
+    margin: 20px auto;
     color: red;
-    border: 2px solid black;
-    border-radius: 20px;
-    background-color: azure;
-    height: 100px;
-    width: 350px;
-    font-size: 50px;
+    font-size: 1.3rem;
 }
 
 .normal {
-    color: blue;
-    border: 2px solid black;
-    border-radius: 20px;
-    background-color: azure;
-    height: 100px;
-    width: 350px;
-    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    padding: 0 15px;
+    margin: 20px auto;
+    color: #02d0ec;
 }
 
 .buttonWrapper {
-    margin-left: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2em;
-    border: 2px solid black;
-    border-radius: 20px;
-    background-color: azure;
-    height: 100px;
-    width: 350px
+    width: 300px;
+    height: 200px;
+    padding: 0 15px;
+    margin: 20px auto;
+    border: 2px solid #02d0ec;
+    border-radius: 5px;
 }
 
 .inc {
     width: 100px;
-    height: 50px;
-    border: 2px solid black;
+    height: 100px;
+    padding: 0 15px;
+    margin: 0 auto;
+    border: 2px solid #02d0ec;
     border-radius: 5px;
-    font-size: 16px;
+    background-color: #02d0ec;
 }
 
 .reset {
     width: 100px;
-    height: 50px;
-    border: 2px solid black;
+    height: 100px;
+    padding: 0 15px;
+    margin: 0 auto;
+    border: 2px solid #02d0ec;
     border-radius: 5px;
-    font-size: 16px;
+    background-color: #02d0ec;
 }
