--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -23,6 +23,16 @@
     color: #02d0ec;
 }
 
+.display {
+    align-items: center;
+    width: 300px;
+    height: 200px;
+    padding: 0 15px;
+    margin: 10px auto;
+    border: 2px solid #02d0ec;
+    border-radius: 5px;
+}
+
 .buttonWrapper {
     display: flex;
     flex-direction: row;
@@ -54,4 +64,18 @@
     border: 2px solid #02d0ec;
     border-radius: 5px;
     background-color: #02d0ec;
+}
+
+.wrap {
+    display: flex;
+    flex-direction: column;
+    max-width: 1170px;
+    width: 400px;
+    height: 400px;
+    padding: 0 15px;
+    /*margin: 0 auto;*/
+    margin: 100px 100px;
+    border: 2px solid #02d0ec;
+    border-radius: 5px;
+    background-color: #202c2d;
 }
