--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,4 @@
-/** {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    box-sizing: border-box;*/
-/*    font-size: 30px;*/
-/*    background-color: #202c2d;*/
-/*}*/
-
-.App {
-    display: flex;
-}
-
-/*!*.wrap {*!*/
-/*!*    display: flex;*!*/
-/*!*    flex-direction: column;*!*/
-/*!*    max-width: 1170px;*!*/
-/*!*    width: 400px;*!*/
-/*!*    height: 400px;*!*/
-/*!*    padding: 0 15px;*!*/
-/*!*    !*margin: 0 auto;*!*!*/
-/*!*    margin: 200px 500px;*!*/
-/*!*    border: 2px solid #02d0ec;*!*/
-/*!*    border-radius: 5px;*!*/
-/*!*    background-color: #202c2d;*!*/
-/*!*}*!*/
-
-/*!*.display {*!*/
-/*!*    align-items: center;*!*/
-/*!*    width: 300px;*!*/
-/*!*    height: 200px;*!*/
-/*!*    padding: 0 15px;*!*/
-/*!*    margin: 10px auto;*!*/
-/*!*    border: 2px solid #02d0ec;*!*/
-/*!*    border-radius: 5px;*!*/
-/*!*}*!*/
-
-/*.error {*/
+/*.App {*/
 /*    display: flex;*/
-/*    justify-content: center;*/
-/*    padding: 0 15px;*/
-/*    margin: 60px auto;*/
-/*    color: red;*/
-/*    font-size: 1.3rem;*/
 /*}*/
 
-/*.normal {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    padding: 0 15px;*/
-/*    margin: 60px auto;*/
-/*    color: #02d0ec;*/
-/*}*/
-
-/*.buttonWrapper {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    width: 300px;*/
-/*    height: 160px;*/
-/*    padding: 0 15px;*/
-/*    margin: 10px auto;*/
-/*    border: 2px solid #02d0ec;*/
-/*    border-radius: 5px;*/
-/*}*/
-
-/*.inc {*/
-/*    width: 100px;*/
-/*    height: 100px;*/
-/*    padding: 0 15px;*/
-/*    margin: 0 auto;*/
-/*    border: 2px solid #02d0ec;*/
-/*    border-radius: 5px;*/
-/*    background-color: #02d0ec;*/
-/*}*/
-
-/*.reset {*/
-/*    width: 100px;*/
-/*    height: 100px;*/
-/*    padding: 0 15px;*/
-/*    margin: 0 auto;*/
-/*    border: 2px solid #02d0ec;*/
-/*    border-radius: 5px;*/
-/*    background-color: #02d0ec;*/
-/*}*/
