--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -1,59 +1,59 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 30px;
-    background-color: #202c2d;
-}
+/** {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    box-sizing: border-box;*/
+/*    font-size: 30px;*/
+/*    background-color: #202c2d;*/
+/*}*/
 
-.error {
-    display: flex;
-    justify-content: center;
-    padding-top: 60px;
-    color: red;
-    font-size: 1.3rem;
-}
+/*.error {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    padding-top: 60px;*/
+/*    color: red;*/
+/*    font-size: 1.3rem;*/
+/*}*/
 
-.normal {
-    display: flex;
-    justify-content: center;
-    padding-top: 60px;
-    color: #02d0ec;
-}
+/*.normal {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    padding-top: 60px;*/
+/*    color: #02d0ec;*/
+/*}*/
 
-.display {
-    align-items: center;
-    width: 300px;
-    height: 200px;
-    padding: 0 15px;
-    margin: 10px auto;
-    border: 2px solid #02d0ec;
-    border-radius: 5px;
-}
+/*.display {*/
+/*    align-items: center;*/
+/*    width: 300px;*/
+/*    height: 200px;*/
+/*    padding: 0 15px;*/
+/*    margin: 10px auto;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-.buttonWrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 160px;
-    padding: 0 15px;
-    margin: 10px auto;
-    border: 2px solid #02d0ec;
-    border-radius: 5px;
-}
+/*.buttonWrapper {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    width: 300px;*/
+/*    height: 160px;*/
+/*    padding: 0 15px;*/
+/*    margin: 10px auto;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-.wrap {
-    display: flex;
-    flex-direction: column;
-    max-width: 1170px;
-    width: 400px;
-    height: 400px;
-    padding: 0 15px;
-    /*margin: 0 auto;*/
-    margin: 100px 100px;
-    border: 2px solid #02d0ec;
-    border-radius: 5px;
-    background-color: #202c2d;
-}
+/*.wrap {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    max-width: 1170px;*/
+/*    width: 400px;*/
+/*    height: 400px;*/
+/*    padding: 0 15px;*/
+/*    !*margin: 0 auto;*!*/
+/*    margin: 100px 100px;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*    background-color: #202c2d;*/
+/*}*/
