--- a/src/Components/SuperButton/SuperButton.module.css
+++ b/src/Components/SuperButton/SuperButton.module.css
@@ -1,9 +1,9 @@
-.button {
-    width: 100px;
-    height: 100px;
-    padding: 0 15px;
-    margin: 0 auto;
-    border: 2px solid #02d0ec;
-    border-radius: 5px;
-    background-color: #02d0ec;
-}
+/*.button {*/
+/*    width: 100px;*/
+/*    height: 100px;*/
+/*    padding: 0 15px;*/
+/*    margin: 0 auto;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*    background-color: #02d0ec;*/
+/*}*/
