--- a/src/Input/Input.module.css
+++ b/src/Input/Input.module.css
@@ -1,14 +1,23 @@
-.settingsInput {
-    width: 100%;
-    height: 40px;
-    padding: 0 10px;
-    border: 2px solid #02d0ec;
-    border-radius: 5px;
-    background-color: #02d0ec;
-}
+/*.settingsInput {*/
+/*    width: 100%;*/
+/*    height: 40px;*/
+/*    padding: 0 10px;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*    background-color: #02d0ec;*/
+/*}*/
 
-.settingsSpan {
-    color : #02d0ec;
-    font-size: 20px;
-    margin: 10px auto;
-}
+/*.settingsInputError {*/
+/*    width: 100%;*/
+/*    height: 40px;*/
+/*    padding: 0 10px;*/
+/*    border: 2px solid #02d0ec;*/
+/*    border-radius: 5px;*/
+/*    background-color: #ec0202;*/
+/*}*/
+
+/*.settingsSpan {*/
+/*    color : #02d0ec;*/
+/*    font-size: 20px;*/
+/*    margin: 10px auto;*/
+/*}*/
